--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="../bower_components/uikit/css/components/progress.css">
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
     <link rel="stylesheet" href="./css/main.css" media="screen" title="no title" charset="utf-8">
   </head>
@@ -29,26 +29,42 @@
           </ul>
         </div>
       </nav>
-
     </div>
     <div class="uk-flex main-body">
         <div class="box main-nav">
-          this is the menu
+          <ul class="uk-list uk-list-space">
+            <li>Codesmith</li>
+            <li>LAMDA</li>
+          </ul>
+
         </div>
         <div class="uk-grid tm-grid-truncate uk-margin uk-margin-left uk-margin-right uk-margin-bottom" data-uk-grid-margin="5">
           <div class="uk-width-medium-1-1">
-
             <div id="upload-drop" class="uk-placeholder">
                 Info text... <a class="uk-form-file">Select a file<input id="upload-select" type="file"></a>.
             </div>
-
-            <!-- <div id="progressbar" class="uk-progress uk-hidden">
-                <div class="uk-progress-bar" style="width: 0%;">...</div>
-            </div> -->
-
+              <script>
+                var holder = document.getElementById('upload-drop');
+                holder.ondragover = function () {
+                  return false;
+                };
+                holder.ondragleave = holder.ondragend = function () {
+                  return false;
+                };
+                holder.ondrop = function (e) {
+                  e.preventDefault();
+                  var file = e.dataTransfer.files[0];
+                  console.log('File you dragged here is', file.path);
+                  return false;
+                };
+              </script>
           </div>
           <div class="uk-width-medium-1-3 uk-row-first">
               <div class="uk-panel uk-panel-box uk-panel-box-primary">
+                <div class="uk-thumbnail">
+                    <img src="images/mongo.svg" alt="">
+                    <div class="uk-thumbnail-caption">...</div>
+                </div>
                   <h3 class="uk-panel-title">Title</h3>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. <code>.uk-panel-box-primary</code>
               </div>
@@ -68,7 +84,7 @@
         </div>
     </div>
     <script src="js/file-search.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/uikit/js/uikit.js"></script>
     <script src="../bower_components/uikit/js/components/upload.js"></script>
