switch to bootstrap4 complete. indexHTML outline done

--- a/app/index.html
+++ b/app/index.html
@@ -5,19 +5,103 @@
 		<meta charset="utf-8">
 		<title>DocDev</title>
 	</head>
+	<link rel="stylesheet" href="./client/css/main.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="bower_components/photon/dist/css/photon.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="node_modules/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
 
 	<body>
 		<div class="window">
 			<div class="window-content">
 				<div class="pane-group">
 					<div class="pane-sm sidebar">
-						<h6>Create your Container</h6>
+						<ul class="list-group container-list container-links">
+							<li class="list-group-item">
+								<div class="media-body">
+									<div class="col-xs-2">
+										<i class="icon ion-ios-box-outline container-icon"></i>
+									</div>
+									<div class="col-xs-10">
+										<strong>List item title</strong>
+										<p>Lorem ipsum dolor sit amet.</p>
+									</div>
+								</div>
+							</li>
+							<li class="list-group-item">
+								<div class="media-body">
+									<div class="col-xs-2">
+										<i class="icon ion-ios-box-outline container-icon"></i>
+									</div>
+									<div class="col-xs-10">
+										<strong>List item title</strong>
+										<p>Lorem ipsum dolor sit amet.</p>
+									</div>
+								</div>
+							</li>
+						</ul>
+						<ul class="list-group container-list bottom-nav">
+							<li class="list-group-item add-container-wrapper">
+								<button type="button" class="btn btn-primary-outline btn-block">Create Container</button>
+							</li>
+							<li class="list-group-item options">
+								<div class="col-xs-4">
+
+								</div>
+								<div class="col-xs-4">
+
+								</div>
+								<div class="col-xs-4">
+									<span class="ion-ios-gear-outline"></span>
+								</div>
+							</li>
+						</ul>
 					</div>
 					<div class="pane">
-						<h1>Welcome to DockDev</h1>
+						<div class="container main-content">
+							<!-- <div class="list-group main-content-list">
+							<a href="#" class="list-group-item active">
+								<h4 class="list-group-item-heading">List group item heading</h4>
+								<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+							</a>
+							<a href="#" class="list-group-item">
+								<h4 class="list-group-item-heading">List group item heading</h4>
+								<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+							</a>
+							<a href="#" class="list-group-item">
+
+								<h4 class="list-group-item-heading">List group item heading</h4>
+								<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+							</a>
+						</div> -->
+							<div class="card-group main-content-card-group ">
+								<div class="card col-xs-12">
+									<!-- <img class="card-img-top" data-src="..." alt="Card image cap"> -->
+									<div class="card-block">
+										<h4 class="card-title">Card title</h4>
+										<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+										<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+									</div>
+								</div>
+								<div class="card col-xs-12">
+									<!-- <img class="card-img-top" data-src="..." alt="Card image cap"> -->
+									<div class="card-block">
+										<h4 class="card-title">Card title</h4>
+										<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+										<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+									</div>
+								</div>
+								<div class="card col-xs-12">
+									<!-- <img class="card-img-top" data-src="..." alt="Card image cap"> -->
+									<div class="card-block">
+										<h4 class="card-title">Card title</h4>
+										<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+										<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -28,14 +112,7 @@
 		window.jQuery = window.$ = typeof module === 'object' ? module.exports : jQuery
 
 	</script>
-	<!-- <script>window.jQuery = window.$ = module.exports;</script> -->
-
 	<script src="node_modules/tether/dist/js/tether.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-
-	<!-- <script type="text/javascript" src="bower_components/dist/js/bootstrap.js">
-
-
-	</script> -->
 
 </html>
