electron app restarted, and basic UI added

--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,18 @@
 
 	<body>
 		<div class="window">
+			<div class="header">
+				<h6>DOCDEV</h6>
+			</div>
 			<div class="window-content">
 				<div class="pane-group">
 					<div class="pane-sm sidebar">
 						<ul class="list-group container-list container-links">
+							<li class="list-group-item add-container">
+								<button type="button" name="button">
+									<span class=" icon ion-ios-plus-outline"></span>
+								</button>
+							</li>
 							<li class="list-group-item">
 								<div class="media-body">
 									<div class="col-xs-2">
@@ -42,9 +50,9 @@
 							</li>
 						</ul>
 						<ul class="list-group container-list bottom-nav">
-							<li class="list-group-item add-container-wrapper">
+							<!-- <li class="list-group-item add-container-wrapper">
 								<button type="button" class="btn btn-primary-outline btn-block">Create Container</button>
-							</li>
+							</li> -->
 							<li class="list-group-item options">
 								<div class="col-xs-4">
 
@@ -60,21 +68,10 @@
 					</div>
 					<div class="pane">
 						<div class="container main-content">
-							<!-- <div class="list-group main-content-list">
-							<a href="#" class="list-group-item active">
-								<h4 class="list-group-item-heading">List group item heading</h4>
-								<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-							</a>
-							<a href="#" class="list-group-item">
-								<h4 class="list-group-item-heading">List group item heading</h4>
-								<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-							</a>
-							<a href="#" class="list-group-item">
-
-								<h4 class="list-group-item-heading">List group item heading</h4>
-								<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-							</a>
-						</div> -->
+							<!-- <form class="form-inline pull-xs-right">
+								<input class="form-control" type="text" placeholder="Search">
+								<button class="btn btn-success-outline" type="submit">Search</button>
+							</form> -->
 							<div class="card-group main-content-card-group ">
 								<div class="card col-xs-12">
 									<!-- <img class="card-img-top" data-src="..." alt="Card image cap"> -->
@@ -114,5 +111,6 @@
 	</script>
 	<script src="node_modules/tether/dist/js/tether.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+	<script type="text/javascript" src="./client/js/main.js"></script>
 
 </html>
