converted ui to react

--- a/app/index.html
+++ b/app/index.html
@@ -12,77 +12,20 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
+	<script type="text/javascript" src="">
+
+
+	</script>
 
 	<body>
 		<div class="window">
 			<div class="header">
 				<h6>DOCDEV</h6>
 			</div>
-			<div class="window-content">
-				<div class="pane-group">
-					<div class="pane-sm sidebar">
-						<ul class="list-group container-list container-links">
-							<!-- add project menu option -->
-							<li class="list-group-item add-container">
-								<button type="button" name="button">
-									<span class=" icon ion-ios-plus-outline"></span>
-								</button>
-							</li>
-							<!-- project Ul Field  -->
-							<li class="list-group-item active-projects">
-								<!-- project node -->
-								<div class="media-body project">
-									<div class="col-xs-2">
-									</div>
-									<div class="col-xs-10">
-										<strong>List item title</strong>
-									</div>
-								</div>
-							</li>
-
-						</ul>
-						<ul class="list-group container-list bottom-nav">
-							<li class="list-group-item options">
-								<div class="col-xs-4">
-								</div>
-								<div class="col-xs-4">
-								</div>
-								<div class="col-xs-4">
-									<button type="button" class="settings-btn">
-										<span class="ion-ios-gear-outline"></span>
-									</button>
-								</div>
-							</li>
-						</ul>
-					</div>
-					<div class="pane" id="main">
-						<div class="container main-content-wrapper">
-							<DockDev/>
-							<div class="card-group main-content-card-group ">
-								<div class="card dependancy col-xs-12">
-									<!-- <img class="card-img-top" data-src="..." alt="Card image cap"> -->
-									<div class="card-block">
-										<h4 class="card-title">Title</h4>
-										<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-										<p class="card-text"><small class="text-muted">...</small></p>
-									</div>
-								</div>
-								<div class="card dependancy col-xs-12">
-									<!-- <img class="card-img-top" data-src="..." alt="Card image cap"> -->
-									<div class="card-block">
-										<h4 class="card-title">Title</h4>
-										<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-										<p class="card-text"><small class="text-muted">...</small></p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div class="window-content" id="main"></div>
 		</div>
 	</body>
-	<script src="lib/build/home.js"></script>
+	<script src="lib/build/app.js"></script>
 	<!-- <script src="lib/build/react-dom.js"></script> -->
 	<script type="text/babel" src="src/components/app.js"></script>
 	<script src="./bower_components/jquery/dist/jquery.min.js"></script>
@@ -92,6 +35,6 @@
 	</script>
 	<script src="../node_modules/tether/dist/js/tether.js"></script>
 	<script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-	<script type="text/javascript" src="./src/main.js"></script>
+	<!-- <script type="text/javascript" src="./src/main.js"></script> -->
 
 </html>
