--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="../node_modules/sweetalert2/dist/sweetalert2.css">
 
 	<body>
 		<div class="window">
@@ -19,8 +20,40 @@
 				<h6>DOCDEV</h6>
 			</div>
 			<div class="window-content" id="main"></div>
+			<button id="openFile" onclick="openFile();">Open</button>
+			<button id="saveFile">Save</button>
+			<br />
+			<br />
+			<textarea id="editor" style="width: 400px; height: 300px;"></textarea>
+			<script>
+				var remote = require('remote');
+				var dialog = remote.require('dialog');
+				var fs = require('fs');
+				var path = require('path');
+
+
+				function openFile() {
+					console.log(dialog.showOpenDialog({
+						properties: ['openDirectory']
+					}));
+				}
+
+				//
+				// function openFile() {
+				// 	dialog.showOpenDialog(function(fileNames) {
+				// 		if (fileNames === undefined) return;
+				// 		var fileName = fileNames[0];
+				// 		fs.readFile(fileName, 'utf-8', function(err, data) {
+				// 			document.getElementById("editor").value = data;
+				// 		});
+				// 	});
+				// }
+
+			</script>
 		</div>
 	</body>
+	<script src="lib/components/app.js"></script>
+	<!-- <script src="lib/build/react-dom.js"></script> -->
 	<script type="text/babel" src="src/components/app.js"></script>
 	<script src="./bower_components/jquery/dist/jquery.min.js"></script>
 	<script>
@@ -29,6 +62,8 @@
 	</script>
 	<script src="../node_modules/tether/dist/js/tether.js"></script>
 	<script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="../node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
+
 	<!-- <script type="text/javascript" src="./src/main.js"></script> -->
 
 </html>
