prep to merge team docs

--- a/app/add-project.html
+++ b/app/add-project.html
@@ -20,23 +20,23 @@
 				<h6>DOCDEV</h6>
 			</div>
 			<div class="window-content" id="main"></div>
-			<button id="openFile" onclick="openFile();">Open</button>
+			<!-- <button id="openFile" onclick="openFile();">Open</button>
 			<button id="saveFile">Save</button>
 			<br />
 			<br />
-			<textarea id="editor" style="width: 400px; height: 300px;"></textarea>
+			<textarea id="editor" style="width: 400px; height: 300px;"></textarea> -->
 			<script>
-				var remote = require('remote');
-				var dialog = remote.require('dialog');
-				var fs = require('fs');
-				var path = require('path');
-
-
-				function openFile() {
-					console.log(dialog.showOpenDialog({
-						properties: ['openDirectory']
-					}));
-				}
+				// var remote = require('remote');
+				// var dialog = remote.require('dialog');
+				// var fs = require('fs');
+				// var path = require('path');
+				//
+				//
+				// function openFile() {
+				// 	console.log(dialog.showOpenDialog({
+				// 		properties: ['openDirectory']
+				// 	}));
+				// }
 
 				// function openFile() {
 				// 	dialog.showOpenDialog(function(fileNames) {
