passing props correctly

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../node_modules/sweetalert2/dist/sweetalert2.css">
+	<script type="text/javascript" src="../node_modules/regenerator/runtime.js"></script>
+
 
 	<body>
 		<div class="window">
@@ -53,7 +55,7 @@
 	</body>
 	<script src="lib/components/app.js"></script>
 	<!-- <script src="lib/build/react-dom.js"></script> -->
-	<script type="text/babel" src="src/components/app.js"></script>
+	<!-- <script type="text/babel" src="src/components/app.js"></script> -->
 	<script src="./bower_components/jquery/dist/jquery.min.js"></script>
 	<script>
 		window.jQuery = window.$ = typeof module === 'object' ? module.exports : jQuery
