working on connecting ui with backend

--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,11 @@
 	</head>
 
 	<link rel="stylesheet" href="./css/main.css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="bower_components/photon/dist/css/photon.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="../bower_components/photon/dist/css/photon.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="../node_modules/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="../bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="../bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../node_modules/sweetalert2/dist/sweetalert2.css">
 	<script type="text/javascript" src="../node_modules/regenerator/runtime.js"></script>
 
@@ -56,7 +56,7 @@
 	<script src="lib/components/app.js"></script>
 	<!-- <script src="lib/build/react-dom.js"></script> -->
 	<!-- <script type="text/babel" src="src/components/app.js"></script> -->
-	<script src="./bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="../bower_components/jquery/dist/jquery.min.js"></script>
 	<script>
 		window.jQuery = window.$ = typeof module === 'object' ? module.exports : jQuery
 
