--- a/app/index.html
+++ b/app/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>DocDev</title>
-  </head>
+	<head>
+		<meta charset="utf-8">
+		<title>DocDev</title>
+	</head>
 
-  <link rel="stylesheet" href="./css/main.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href="../bower_components/photon/dist/css/photon.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href="../node_modules/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href="../bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href="../bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="../node_modules/sweetalert2/dist/sweetalert2.css">
-  <script>
-    const ipcRenderer = require('electron').ipcRenderer;
-  </script>
+	<link rel="stylesheet" href="./bower_components/photon/dist/css/photon.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="../node_modules/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="./bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="./bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="../node_modules/sweetalert2/dist/sweetalert2.css">
+	<link rel="stylesheet" href="./css/main.css" media="screen" title="no title" charset="utf-8">
+	<script>
+		const ipcRenderer = require('electron').ipcRenderer;
+		const dialog = require('electron').dialog;
 
-  <body>
-    <div class="window">
-      <div class="header">
-        <h6>DOCDEV</h6>
-      </div>
-      <div class="window-content" id="main"></div>
-    </div>
-  </body>
+	</script>
 
-  <script src="./lib/bundle.js"></script>
+	<body>
+		<div class="window">
+			<div class="header">
+				<h6>DOCDEV</h6>
+			</div>
+			<div class="window-content" id="main"></div>
+		</div>
+	</body>
+
+	<script src="./lib/bundle.js"></script>
 
 </html>
