add project complete

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="../node_modules/sweetalert2/dist/sweetalert2.css">
   <script>
     const ipcRenderer = require('electron').ipcRenderer;
+    const remote = require('electron').remote;
   </script>
 
   <body>
