started react-router integration

--- a/app/index.html
+++ b/app/index.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<title>DocDev</title>
 	</head>
-
 	<link rel="stylesheet" href="./css/main.css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="../bower_components/photon/dist/css/photon.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="../node_modules/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="../bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="../bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../node_modules/sweetalert2/dist/sweetalert2.css">
 	<script>
 		const ipcRenderer = require('electron').ipcRenderer;
 		const remote = require('electron').remote;
 	</script>
 	<body>
-		<div class="window">
-			<div class="header">
-				<h6>DOCDEV</h6>
-			</div>
-			<div class="window-content" id="main"></div>
-		</div>
+		<div id="app"></div>
+		<!-- <script src="./src/components/App.js"></script>
+		<script src="./src/components/AddProject.js"></script> -->
+
+		<script src="./lib/bundle.js"></script>
 	</body>
-	<script src="./lib/bundle.js"></script>
 </html>
