--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,7 @@
 		const ipcRenderer = require('electron').ipcRenderer;
 		const remote = require('electron').remote;
 	</script>
-	<body>
-		<div id="app"></div>
-		<!-- <script src="./src/components/App.js"></script>
-		<script src="./src/components/AddProject.js"></script> -->
-
+	<body><div id="app"></div>
 		<script src="./lib/bundle.js"></script>
 	</body>
 </html>
