--- a/app/index.html
+++ b/app/index.html
@@ -3,23 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>DocDev</title>
-    <link rel="stylesheet" href="./css/main.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="../bower_components/photon/dist/css/photon.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="./build/client/css/main.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../node_modules/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="../bower_components/ionicons/css/ionicons.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="../bower_components/ionicons/fonts/ionicons.ttf" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../node_modules/sweetalert2/dist/sweetalert2.css">
-
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <script>
       const ipcRenderer = require('electron').ipcRenderer;
       const remote = require('electron').remote;
     </script>
-    
   </head>
-
   <body>
     <div id="app"></div>
-    <script src="./lib/bundle.js"></script>
+    <script src="./build/client/bundle.js"></script>
   </body>
 </html>
