draft structure & functionality

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <script>
       const ipcRenderer = require('electron').ipcRenderer;
       const remote = require('electron').remote;
+      const R = require('ramda');
     </script>
   </head>
   <body>
