--- a/app/index.html
+++ b/app/index.html
@@ -15,5 +15,7 @@
   <body>
     <div id="app"></div>
     <script src="./build/client/bundle.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js" >
+
   </body>
 </html>
