--- a/app/index.html
+++ b/app/index.html
@@ -6,15 +6,10 @@
     <link rel="stylesheet" href="./build/client/css/main.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../node_modules/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-    <script>
-      const ipcRenderer = require('electron').ipcRenderer;
-      const remote = require('electron').remote;
-    </script>
   </head>
   <body>
     <div id="app"></div>
     <script src="./build/client/bundle.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.js" >
-
+    <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
   </body>
 </html>
