--- a/app/index.html
+++ b/app/index.html
@@ -3,18 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>DocDev</title>
-    <link rel="stylesheet" href="./build/client/css/main.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="../node_modules/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-    <script>
-      const ipcRenderer = require('electron').ipcRenderer;
-      const remote = require('electron').remote;
-    </script>
+    <link rel="stylesheet" href="./client/css/main.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="./client/bower_components/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="./client/bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <div id="app"></div>
-    <script src="./build/client/bundle.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.js" >
-
+    <script src="./client/bundle.js"></script>
   </body>
 </html>
