--- a/app/index.html
+++ b/app/index.html
@@ -10,5 +10,15 @@
   <body>
     <div id="app"></div>
     <script src="./client/bundle.js"></script>
+    <script>
+      window.$ = window.jQuery = require('./client/bower_components/jquery/dist/jquery.js');
+    </script>
+    <script src="./client/bower_components/tether/dist/js/tether.js"></script>
+    <script src="./client/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script>
+    $("button").popover("show");
+    $("[data-toggle=popover]").popover({"placement": "bottom"});
+
+    </script>
   </body>
 </html>
