--- a/app/index.html
+++ b/app/index.html
@@ -10,5 +10,10 @@
   <body>
     <div id="app"></div>
     <script src="./client/bundle.js"></script>
+    <script>
+      window.$ = window.jQuery = require('./client/bower_components/jquery/dist/jquery.min.js');
+    </script>
+    <script src="./client/bower_components/tether/dist/js/tether.min.js"></script>
+    <script src="./client/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
