settingsRoute & page added, main app content UI updated

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./client/css/main.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="./client/bower_components/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="./client/bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   </head>
   <body>
     <div id="app"></div>
