--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>DocDev</title>
+    <title>DockDev</title>
     <link rel="stylesheet" href="./client/css/main.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="./client/bower_components/tether/dist/css/tether.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="./client/bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
